# waycal

./: Cargo.toml  LICENSE  README.md  wrangler.jsonc
packaging/aur/: .SRCINFO  PKGBUILD
site/: index.html
src/: main.rs
